--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "validate.js": "^0.13.1",
     "expo-image-picker": "~10.2.2",
     "expo-permissions": "~12.1.1",
-    "expo-constants": "~11.0.1"
+    "expo-constants": "~11.0.1",
+    "expo-av": "~9.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
